Better responsiveness of banner

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
   <!-- Add your site or application content here -->
 
     <header>
-      <!--
-      <div class="full-width nav-bar">
+      <div class="full-width">
           <div class="half-width">
             <h1>cowork</h1>
           </div>
-          <div class="half-width">
+          <!--<div class="half-width">
             <nav>
               <ul>
                 <li><a href="../html/schedule.html">schedule</a></li>
@@ -39,10 +38,10 @@
                 <li><a href="../html/faq.html">faq</a></li>
               </ul>
             </nav>
-          </div>
-      </div>  -->
-      <div class="full-width gradient">
-        <img id="logo-lockup" src="img/logo-lockup-g.svg" />
+          </div>-->
+      </div>
+      <div class="full-width">
+        <img src="img/logo-lockup-g.svg" />
       </div>
     </header>
 
