--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -24,79 +26,76 @@
 
   <!-- Add your site or application content here -->
 
-<header>
-  <div class="full-width">
-    <div class="one-third-width" id="header">
-      <a href="index.html"><h1 class="logo">cowork</h1></a>
-      <h3 class="language"><a href="../html/en.html">EN</a>&emsp;&mid;&emsp;<a href="../html/de.html">DE</a></h3>
-    </div>
-    <nav>
-        <a class="two-third-width"></a>
-        <ul>
-          <li><a href="../html/contact.html">contact</a></li>
-          <li><a href="../html/faq.html">faq</a></li>
-          <li><a href="../html/tours.html">tours</a></li>
-          <li><a href="../html/schedule.html">schedule</a></li>
-        </ul>
-      </nav>
-
+  <header>
     <div class="full-width">
-        <img src="img/logo-lockup-p.svg" />
+      <div class="one-third-width" id="header">
+        <a href="index.html"><h1 class="logo">cowork</h1></a>
+        <h3 class="language"><a href="/index.html">EN</a>&emsp;&mid;&emsp;<a href="/index-de.html">DE</a></h3>
       </div>
-    </header>
-
-    <main>
-      <section id="introduction">
-        <div class="full-width">
-          <h2>Yes, now a week long!</h2>
-          <p>
-            If you are new to coworking, now is your chance to see what it's all about.</p>
-            <p>
-              Visit one of the many  participating spaces and get to know who is doing what where. Freelancers, startups, corporate employees, digital nomads, and many more can be found in one of nearly a hundred Berlin coworking spaces.
-          </p>
-        </div>
-      </section>
-      <section id="newsletter">
-        <div class="full-width">
-          <h2>STAY TUNED</h2>
-          <p>
-            Take a tour, visit your neighborhood space, or join an event to see what coworking has to offer!
-          <br /><span>Signup for the newsletter to stay up to date on event details.</span>
-          </p>
-          <p id="btn-padding">
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSd2Rnu8137-d2BnQpbffWXTsvhDysF0abh7fll4Q1GB5enVfA/viewform" target="_blank">signup today</a></p>
-        </div>
-      </section>
-    </main>
-    <footer id="contact">
+      <nav>
+          <a class="two-third-width"></a>
+          <ul>
+            <li><a href="../html/contact.html">contact</a></li>
+            <li><a href="../html/faq.html">faq</a></li>
+            <li><a href="./tours/index.html">tours</a></li>
+            <li><a href="../html/schedule.html">schedule</a></li>
+          </ul>
+        </nav>
       <div class="full-width">
-        <div class="half-width">
-          <p><span>Get in touch</span><br />
-          <a href="mailto:berlincoworking@gmail.com">berlincoworking@gmail.com</p></a>
-          <p>
-          <a href="#" id="imprint">Imprint</a></p>
+          <img src="img/logo-lockup-p.svg" />
         </div>
-        <div class="half-width" id="social-media">
-          <p>
-          <a href="https://twitter.com/berlincoworking"><img id="right-pad" src="img/twitter.svg" alt="twitter" height="30px" width="30px" /></a>
-          <a href="https://www.facebook.com/berlincoworking/"><img src="img/facebook.svg" alt="facebook" height="30px" width="30px" /></a></p>
-        </div>
-      </div>
-    </footer>
+      </header>
 
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/main.js"></script>
+
+<main>
+  <section id="introduction">
+    <div class="full-width">
+      <h2>A full week to explore the future of work!</h2>
+      <p>Wonder what the future of work looks like? Probably a lot like coworking.</p>
+      <p>On the week from 17.&ensp;&ndash;&ensp;21. September, Berlin's coworking spaces will open their doors for the coworking festival.
+        <br />A unique chance to explore modern work spaces and collaboration.</p>
+    </div>
+  </section>
+  <section id="newsletter">
+    <div class="full-width">
+      <h2>STAY TUNED</h2>
+      <p>We will announce the first locations soon.
+        <p><span>Follow us on<a href="https://www.facebook.com/berlincoworking" target="_blank"> facebook</a> or signup for the newsletter to stay up to date.</span>
+      </p>
+      <p id="btn-padding">
+        <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSd2Rnu8137-d2BnQpbffWXTsvhDysF0abh7fll4Q1GB5enVfA/viewform" target="_blank">signup today</a></p>
+    </div>
+  </section>
+</main>
+
+<footer id="contact">
+  <div class="full-width">
+    <div class="half-width">
+      <p><span>Get in touch</span><br /><a href="mailto:berlincoworking@gmail.com" target="_blank">berlincoworking@gmail.com</a></p>
+      <p><a href="/imprint.html" id="imprint" target="_blank">Imprint</a></p>
+    </div>
+    <div class="half-width" id="social-media">
+      <p>
+        <a href="https://twitter.com/berlincoworking" target="_blank"><img id="right-pad" src="img/twitter.svg" alt="twitter" height="30px" width="30px" /></a>
+        <a href="https://www.facebook.com/berlincoworking/" target="_blank"><img src="img/facebook.svg" alt="facebook" height="30px" width="30px" /></a>
+      </p>
+    </div>
+  </div>
+</footer>
+
+<script src="js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+<script src="js/plugins.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-</body>
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
+</body>
 </html>
