--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="../html/contact.html">contact</a></li>
             <li><a href="../html/faq.html">faq</a></li>
             <li><a href="./tours/index.html">tours</a></li>
-            <li><a href="../html/schedule.html">schedule</a></li>
+            <li><a href="./schedule/index.html">schedule</a></li>
           </ul>
         </nav>
       <div class="full-width">
