--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <nav>
           <a class="two-third-width"></a>
           <ul>
-            <li><a href="../html/contact.html">contact</a></li>
-            <li><a href="../html/faq.html">faq</a></li>
+            <li><a href="./contact/index.html">contact</a></li>
+            <li><a href="./faq/index.html">faq</a></li>
             <li><a href="./tours/index.html">tours</a></li>
             <li><a href="./schedule/index.html">schedule</a></li>
           </ul>
