Fixed nav alignment
...now on to hide the logo on homepage and nav background color/opacity

--- a/faq/index.html
+++ b/faq/index.html
@@ -27,24 +27,20 @@
   <!-- Add your site or application content here -->
 
 <header class="faq">
-  <div class="full-width">
-    <div class="one-third-width" id="header">
-      <a href="../index.html"><h1 class="logo">cowork</h1></a>
-      <h3 class="language"><a href="../html/en.html">EN</a>&emsp;&mid;&emsp;<a href="../html/de.html">DE</a></h3>
-    </div>
-    <nav>
-      <a class="two-third-width"></a>
-      <ul>
-        <li><a href="../contact/index.html">contact</a></li>
-        <li><a href="../faq/index.html">faq</a></li>
-        <li><a href="../tours/index.html">tours</a></li>
-        <li><a href="../schedule/index.html">schedule</a></li>
-      </ul>
-    </nav>
-    <div class="full-width">
-        <img src="../img/logo-lockup-p.svg" />
-    </div>
-  </div>
+  <nav class="header" id="myHeader">
+    <a class="menu"></a>
+    <a href="index.html"><h1 class="logo">cowork</h1></a>
+    <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
+    <ul>
+      <li><a href="../contact/index.html">contact</a></li>
+      <li><a href="../faq/index.html">faq</a></li>
+      <li><a href="../tours/index.html">tours</a></li>
+      <li><a href="../schedule/index.html">schedule</a></li>
+    </ul>
+  </nav>
+<div id="faq-banner">
+    <h1 class="title">FAQ</h1>
+</div>
 </header>
 
 <main>
