--- a/schedule/index.html
+++ b/schedule/index.html
@@ -28,9 +28,10 @@
   <!-- Add your site or application content here -->
 
   <header>
-    <div id="nav-bar">
-      <nav>
-        <a class="two-third-width"></a>
+      <nav class="header" id="myHeader">
+        <a class="menu"></a>
+        <a href="index.html"><h1 class="logo">cowork</h1></a>
+        <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
         <ul>
           <li><a href="../contact/index.html">contact</a></li>
           <li><a href="../faq/index.html">faq</a></li>
@@ -38,12 +39,8 @@
           <li><a href="../schedule/index.html">schedule</a></li>
         </ul>
       </nav>
-      <a href="../index.html"><p class="logo">cowork</h1></p>
-      <h3 class="language"><a href="../html/en.html">EN</a>&emsp;&mid;&emsp;<a href="../html/de.html">DE</a></h3>
-    </div>
     <div id="schedule-banner">
         <h1 class="title">SCHEDULE</h1>
-    </div>
     </div>
   </header>
 
