--- a/tours/nav-bar-test.html
+++ b/tours/nav-bar-test.html
@@ -26,47 +26,23 @@
 
   <!-- Add your site or application content here -->
 
-  <header>
-    <div class="full-width">
-      <div class="one-third-width" id="header">
-        <a href="index.html"><h1 class="logo">cowork</h1></a>
-        <h3 class="language"><a href="/index.html">EN</a>&emsp;&mid;&emsp;<a href="/index-de.html">DE</a></h3>
-      </div>
-      <nav>
-          <a class="two-third-width"></a>
-          <ul>
-            <li><a href="../html/contact.html">contact</a></li>
-            <li><a href="../html/faq.html">faq</a></li>
-            <li><a href="tours.html">tours</a></li>
-            <li><a href="../html/schedule.html">schedule</a></li>
-          </ul>
-        </nav>
+<header>
+  <nav>
+    <a class="menu"></a>
+    <a href="index.html"><h1 class="logo">cowork</h1></a>
+    <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
+    <ul>
+      <li><a href="../html/contact.html">contact</a></li>
+      <li><a href="../html/faq.html">faq</a></li>
+      <li><a href="tours.html">tours</a></li>
+      <li><a href="../html/schedule.html">schedule</a></li>
+    </ul>
+  </nav>
+
       <div class="full-width">
           <img src="../img/logo-lockup-p.svg" />
         </div>
       </header>
-
-
-<main>
-  <section id="introduction">
-    <div class="full-width">
-      <h2>A full week to explore the future of work!</h2>
-      <p>Wonder what the future of work looks like? Probably a lot like coworking.</p>
-      <p>On the week from 17.&ensp;&ndash;&ensp;21. September, Berlin's coworking spaces will open their doors for the coworking festival.
-        <br />A unique chance to explore modern work spaces and collaboration.</p>
-    </div>
-  </section>
-  <section id="newsletter">
-    <div class="full-width">
-      <h2>STAY TUNED</h2>
-      <p>We will announce the first locations soon.
-        <p><span>Follow us on<a href="https://www.facebook.com/berlincoworking" target="_blank"> facebook</a> or signup for the newsletter to stay up to date.</span>
-      </p>
-      <p id="btn-padding">
-        <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSd2Rnu8137-d2BnQpbffWXTsvhDysF0abh7fll4Q1GB5enVfA/viewform" target="_blank">signup today</a></p>
-    </div>
-  </section>
-</main>
 
 <footer id="contact">
   <div class="full-width">
