--- a/tours/index.html
+++ b/tours/index.html
@@ -27,22 +27,19 @@
   <!-- Add your site or application content here -->
 
   <header>
-    <div id="nav-bar">
-      <nav>
-        <a class="two-third-width"></a>
-        <ul>
-          <li><a href="../contact/index.html">contact</a></li>
-          <li><a href="../faq/index.html">faq</a></li>
-          <li><a href="../tours/index.html">tours</a></li>
-          <li><a href="../schedule/index.html">schedule</a></li>
-        </ul>
-      </nav>
-      <a href="../index.html"><p class="logo">cowork</h1></p>
-      <h3 class="language"><a href="../html/en.html">EN</a>&emsp;&mid;&emsp;<a href="../html/de.html">DE</a></h3>
-    </div>
+    <nav class="header" id="myHeader">
+      <a class="menu"></a>
+      <a href="index.html"><h1 class="logo">cowork</h1></a>
+      <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
+      <ul>
+        <li><a href="../contact/index.html">contact</a></li>
+        <li><a href="../faq/index.html">faq</a></li>
+        <li><a href="../tours/index.html">tours</a></li>
+        <li><a href="../schedule/index.html">schedule</a></li>
+      </ul>
+    </nav>
     <div id="tours-banner">
         <h1 class="title">TOURS</h1>
-    </div>
     </div>
   </header>
 
