--- a/faq/index.html
+++ b/faq/index.html
@@ -26,10 +26,10 @@
 
   <!-- Add your site or application content here -->
 
-<header class="faq">
+<header>
   <nav class="header" id="myHeader">
     <a class="menu"></a>
-    <a href="index.html"><h1 class="logo">cowork</h1></a>
+    <a href="../index.html"><h1 class="logo">cowork</h1></a>
     <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
     <ul>
       <li><a href="../contact/index.html">contact</a></li>
@@ -44,6 +44,53 @@
 </header>
 
 <main>
+  <section class="faq">
+      <img src="../img/faq-1.png" />
+      <h2>How much does it cost to participate in the festival?</h2>
+      <p>It is free of charge!</p>
+  </section>
+
+  <section class="faq">
+      <h2>How does it work?</h2>
+      <p>We have partnered with the best Coworking Spaces in Berlin to give you a chance to try out all of them! With the help of an app and collective coworking membership One Coworking, all participants can get access to any of our partner spaces during the Festival Week. Registered participants will receive an email with detailed guidance and free voucher codes to be inserted into the app. This will allow them to  check in to a coworking space of their choice, be it for work or for an event. The use of the App is recommended but not required.
+      </p>
+  </section>
+
+  <section class="faq">
+    <img src="../img/faq-2.png" />
+      <h2>Which coworking spaces are participating in the Coworking Festival?</h2>
+      <p>There are a dozen participating spaces. Check out the coworking-map for details.
+      </p>
+  </section>
+
+  <section class="faq">
+      <h2>Do I have to register for the festival?</h2>
+      <p>You can register by typing your email address into the provided box on our Homepage to get free coworking vouchers. The registration is optional.<br />
+      Please note that some spaces might ask to sign up in advance for special events due to limited space availability. Please double check with our Schedule if that's the case for the event of your choice.
+      </p>
+  </section>
+
+  <section class="faq">
+      <img src="../img/faq-3.png" />
+        <h2>I want to participate. What should I do?</h2>
+        <ol>
+          <li>Register your email address on our <a href="../index.html">Homepage</a></li>
+          <li>Download One Coworking app for <a href="https://itunes.apple.com/de/app/one-coworking/id1137381231" target="_blank">iOS</a> or for <a href="https://play.google.com/store/apps/details?id=com.onecoworking&hl=de" target="_blank">Android</a></li>
+          <li>Check out our <a href="../schedule/index.html">Schedule</a> and <a href="../tours/index.html">Tours</a> as well as our <a href="https://www.facebook.com/berlincoworking/" target="_blank">Facebook</a> page for the latest info</li>
+          <li>Choose a coworking space or event to try out</li>
+          <li>Before the start of the festival, check your emails for One Coworking voucher codes</li>
+          <li>Follow the instructions in the email on how to insert the code to the app</li>
+          <li>Visit a coworking space, check-in on the app and enjoy!</li>
+        </ol>
+        <p>        </p>
+  </section>
+
+  <section class="faq">
+      <h2>My Coworking Space wants to join. How to become a Partner Space?</h2>
+      <p id="no-border">Please fill out this <a href="#" target="_blank">form</a> and we will contact you with further details.
+      </p>
+  </section>
+
 
 </main>
 
