--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,7 +30,7 @@
   <header>
       <nav class="header" id="myHeader">
         <a class="menu"></a>
-        <a href="../index.html"><h1 class="logo">cowork</h1></a>
+        <a href="./index.html"><h1 class="logo">cowork</h1></a>
         <p class="language"><a href="/index.html">EN</a>&emsp;&emsp;&mid;&emsp;&emsp;<a href="/index-de.html">DE</a></p>
         <ul>
           <li><a href="../contact/index.html">contact</a></li>
